client/build_output.txt
node.exe : npm warn 
config ignoring 
workspace config at C:
\Users\ratte\Desktop\O
verSeekv2\client/.npmr
c
At C:\Program Files\no
dejs\npm.ps1:29 char:3
+   & $NODE_EXE 
$NPM_CLI_JS $args
+   ~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (npm warn c   
 onfig...2\client/    
.npmrc:String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 

> overseek-client@0.0.0 build
> tsc && vite build

[36mvite v5.4.21 [32mbuilding for production...[36m[39m
node:internal/process/
promises:394
    triggerUncaughtExc
eption(err, true /* 
fromPromise */);
    ^

[Failed to load 
PostCSS config: 
Failed to load 
PostCSS config 
(searchPath: C:/Users/
ratte/Desktop/OverSeek
v2/client): [Error] 
Loading PostCSS 
Plugin failed: Cannot 
find module 
'@tailwindcss/postcss'
Require stack:
- C:\Users\ratte\Deskt
op\OverSeekv2\client\p
ostcss.config.js

(@C:\Users\ratte\Deskt
op\OverSeekv2\client\p
ostcss.config.js)
Error: Loading 
PostCSS Plugin 
failed: Cannot find 
module 
'@tailwindcss/postcss'
Require stack:
- C:\Users\ratte\Deskt
op\OverSeekv2\client\p
ostcss.config.js

(@C:\Users\ratte\Deskt
op\OverSeekv2\client\p
ostcss.config.js)
    at load (file:///C
:/Users/ratte/Desktop/
OverSeekv2/node_module
s/vite/dist/node/chunk
s/dep-BK3b2jBa.js:3363
2:11)
    at file:///C:/User
s/ratte/Desktop/OverSe
ekv2/node_modules/vite
/dist/node/chunks/dep-
BK3b2jBa.js:33657:16
    at Array.map 
(<anonymous>)
    at plugins (file:/
//C:/Users/ratte/Deskt
op/OverSeekv2/node_mod
ules/vite/dist/node/ch
unks/dep-BK3b2jBa.js:3
3656:8)
    at processResult (
file:///C:/Users/ratte
/Desktop/OverSeekv2/no
de_modules/vite/dist/n
ode/chunks/dep-BK3b2jB
a.js:33726:14)
    at file:///C:/User
s/ratte/Desktop/OverSe
ekv2/node_modules/vite
/dist/node/chunks/dep-
BK3b2jBa.js:33856:14]

Node.js v22.15.0
npm error Lifecycle 
script `build` failed 
with error:
npm error code 1
npm error path C:\User
s\ratte\Desktop\OverSe
ekv2\client
npm error workspace 
overseek-client@0.0.0
npm error location C:\
Users\ratte\Desktop\Ov
erSeekv2\client
npm error command 
failed
npm error command C:\w
indows\system32\cmd.ex
e /d /s /c tsc && 
vite build
